--- a/written/eLifeRevision/eLife2020.bib
+++ b/written/eLifeRevision/eLife2020.bib
@@ -6,8 +6,6 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
-
-
 @article{gonccalves2019training,
 	Author = {Gon{\c{c}}alves, Pedro J and Lueckmann, Jan-Matthis and Deistler, Michael and Nonnenmacher, Marcel and {\"O}cal, Kaan and Bassetto, Giacomo and Chintaluri, Chaitanya and Podlaski, William F and Haddad, Sara A and Vogels, Tim P and others},
 	Date-Added = {2019-11-18 11:12:58 -0500},
@@ -1017,3 +1015,113 @@
 	Title = {Multiple mechanisms switch an electrically coupled, synaptically inhibited neuron between competing rhythmic oscillators},
 	Volume = {77},
 	Year = {2013}}
+	
+@article{liepe2014framework,
+  title={A framework for parameter estimation and model selection from experimental data in systems biology using approximate Bayesian computation},
+  author={Liepe, Juliane and Kirk, Paul and Filippi, Sarah and Toni, Tina and Barnes, Chris P and Stumpf, Michael PH},
+  journal={Nature protocols},
+  volume={9},
+  number={2},
+  pages={439--456},
+  year={2014},
+  publisher={Nature Publishing Group}
+}
+
+@article{karlsson2012efficient,
+  title={An efficient method for structural identifiability analysis of large dynamic systems},
+  author={Karlsson, Johan and Anguelova, Milena and Jirstrand, Mats},
+  journal={IFAC Proceedings Volumes},
+  volume={45},
+  number={16},
+  pages={941--946},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{girolami2008bayesian,
+  title={Bayesian inference for differential equations},
+  author={Girolami, Mark},
+  journal={Theoretical Computer Science},
+  volume={408},
+  number={1},
+  pages={4--16},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@article{golightly2011bayesian,
+  title={Bayesian parameter inference for stochastic biochemical network models using particle Markov chain Monte Carlo},
+  author={Golightly, Andrew and Wilkinson, Darren J},
+  journal={Interface focus},
+  volume={1},
+  number={6},
+  pages={807--820},
+  year={2011},
+  publisher={The Royal Society}
+}
+
+@article{girolami2011riemann,
+  title={Riemann manifold langevin and hamiltonian monte carlo methods},
+  author={Girolami, Mark and Calderhead, Ben},
+  journal={Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+  volume={73},
+  number={2},
+  pages={123--214},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@article{hines2014determination,
+  title={Determination of parameter identifiability in nonlinear biophysical models: A Bayesian approach},
+  author={Hines, Keegan E and Middendorf, Thomas R and Aldrich, Richard W},
+  journal={Journal of General Physiology},
+  volume={143},
+  number={3},
+  pages={401--416},
+  year={2014},
+  publisher={The Rockefeller University Press}
+}
+
+@article{chkrebtii2016bayesian,
+  title={Bayesian solution uncertainty quantification for differential equations},
+  author={Chkrebtii, Oksana A and Campbell, David A and Calderhead, Ben and Girolami, Mark A and others},
+  journal={Bayesian Analysis},
+  volume={11},
+  number={4},
+  pages={1239--1267},
+  year={2016},
+  publisher={International Society for Bayesian Analysis}
+}
+
+@article{karlsson2012efficient,
+  title={An efficient method for structural identifiability analysis of large dynamic systems},
+  author={Karlsson, Johan and Anguelova, Milena and Jirstrand, Mats},
+  journal={IFAC Proceedings Volumes},
+  volume={45},
+  number={16},
+  pages={941--946},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{liepe2014framework,
+  title={A framework for parameter estimation and model selection from experimental data in systems biology using approximate Bayesian computation},
+  author={Liepe, Juliane and Kirk, Paul and Filippi, Sarah and Toni, Tina and Barnes, Chris P and Stumpf, Michael PH},
+  journal={Nature protocols},
+  volume={9},
+  number={2},
+  pages={439--456},
+  year={2014},
+  publisher={Nature Publishing Group}
+}
+
+@article{erguler2011practical,
+  title={Practical limits for reverse engineering of dynamical systems: a statistical analysis of sensitivity and parameter inferability in systems biology models},
+  author={Erguler, Kamil and Stumpf, Michael PH},
+  journal={Molecular BioSystems},
+  volume={7},
+  number={5},
+  pages={1593--1602},
+  year={2011},
+  publisher={Royal Society of Chemistry}
+}	
